# cmake-tutorial

./: .gitignore  README.md  cmake-functions.md
step-1/: CMakeLists.txt
step-2/: CMakeLists.txt  tutorial.cxx
step-3/: CMakeLists.txt
step-3/MathFunctions/: CMakeLists.txt
step-4/: CMakeLists.txt
step-4/MathFunctions/: CMakeLists.txt
